--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a>Download Excursion (Coming soon!).</a>
-    
+    <p><a>Download Excursion (Coming soon!).</a></p>
+    <video id="videoplayer"
+    src="resources/videos/excursion.mp4"
+    loop
+    autoplay
+    controls
+    preload="auto">
+    </video>
+    <h1 class="secondh1">Your personal travel guide</h1>
+    <p>Excursion remembers the places you like, and recommends new places of interest around you.</p>
+    <img src="resources/images/camp.jpg">
+    <p><img src="resources/images/phone.png"></p>
+    <h1>Coming soon for iPhone and Android</h1>
+    <p><a>Download Excursion (Coming soon!).</a></p> 
 </body>
+<footer><p>&copy Excursion</p></footer>
 </html>
