--- a/index.html
+++ b/index.html
@@ -8,14 +8,9 @@
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a>Download Excursion (Coming soon!).</a></p>
-    <video id="videoplayer"
-    src="resources/videos/excursion.mp4"
-    loop
-    autoplay
-    controls
-    
-    preload="auto">
+    <p><a href="#">Download Excursion (Coming soon!).</a></p>
+    <video autoplay loop>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
     <h1 class="secondh1">Your personal travel guide</h1>
     <p>Excursion remembers the places you like, and recommends new places of interest around you.</p>
