--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Coming soon!).</a></p>
-    <video autoplay loop>
+    <video autoplay muted loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
     <h1 class="secondh1">Your personal travel guide</h1>
